2013-11-20 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/pullPlotUtils.py: utility module for pull plots

2013-11-20 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/YieldsTable.py: allow -C and -L options to set caption and label
 	  by hand for outputted table
	* scripts/YieldsTableTex.py: propagated changes from YieldsTable.py

2013-11-15 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/ConfigMgr.cxx: use ExclusionCleanup() for the hypothesis tests

2013-11-15 Max Baak <mbaak@cern.ch>
	U setup.sh
	* Point to patched root version
	* In the ATLAS SUSY group we find occasionally when doing an
	* upper limit scan that hypothesis tests of one or several of the scan points fail (for example when mu
	* is too high, and the fit gets too distorted), but don't get rejected or flagged as such, which
	* shows up as spikes in the upper limit scan.
	* I've added a function 
	HypoTestInverterResult::ExclusionCleanup() 
	* which excludes such points and redoes the inversion.


2013-10-28 Alex Koutsman <koutsman@cern.ch>
	U    scripts/YieldsTable.py
	U    scripts/YieldsTableTex.py
	U    scripts/SysTable.py
	* update YieldsTableTex.py to deal with sample with "_" in the name
	* change modus for YieldsTable.py and SysTable.py to +x

2013-10-30 Max Baak <mbaak@cenn.ch>
	M       src/Utils.cxx
	* Fix compilation warnings
	M       src/ConfigMgr.cxx
	* reset initial values before doing upperlimit
	M 	setup.sh
	* root v5.34.10

2013-10-28 Alex Koutsman <koutsman@cern.ch>
	U    scripts/YieldsTable.py
	U    scripts/YieldsTableTex.py
	* Fixed a bug in YieldsTable.py, when you run with -S option: show the 
	* sum of all regions. This option is off though by default, and we
	* believe noone has been affected. (The summed numbers are so clearly
	* off that we should've heard something if someone was.)
	* Tagging HistFitter-00-00-33

2013-10-28 Max Baak <mbaak@cern.ch>
	M       src/HypoTestTool.cxx
	* Initial fit of hypotest done with Minuit2
	M 	src/Utils.cxx