@@ -1,3 +1,8 @@
+2013-11-21 Max Baak <mbaak@cern.ch>
+        * src/ConfigMgr.cxx: ExclusionCleanup() now reports the number of
+	rejected hypo tests in per scan.
+
+
 2013-11-20 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* python/pullPlotUtils.py: utility module for pull plots
 
